# artha_bot

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  hermes_soul.md  pyproject.toml
config/: brokerage.yaml  deployment.yaml  instruments.yaml  market.yaml  modes.yaml  news.yaml  risk.yaml  strategy.yaml
dashboard/: Dockerfile  entrypoint.sh  index.html  main.js  nginx.conf  style.css
docs/: PROJECT_STATUS.md
scripts/: approve_live.py  check_deployment_preflight.py  check_operational_audit_coverage.py  deploy_dashboard_to_ec2.sh  deploy_to_ec2.sh  download_historical_data.py  login_zerodha.py  package_live_approval.py  review_promotion_readiness.py  run_deployment_scheduler.py  run_kite_smoke.py  run_paper_loop.py  run_strategy_calibration.py
src/arthabot/: __init__.py  audit_store.py  backtest.py  balance_provider.py  broker_gateway.py  broker_order_updates.py  brokerage.py  common.py  config.py  dashboard_api.py  data.py  data_cache.py  data_providers.py  deployment_command.py  deployment_config.py  deployment_preflight.py  deployment_preflight_cli.py  deployment_registry.py  deployment_service.py  deployment_service_cli.py  deployment_worker.py  execution.py  historical_strategy_backtest.py  http_clients.py  instruments.py  internal_state_store.py  kite_smoke_cli.py  kite_smoke_tests.py  learning.py  learning_comparison.py  learning_operations.py  learning_report.py  learning_rerun_worker.py  live_approval.py  live_approval_interface.py  live_approval_package.py  live_approval_package_cli.py  live_feed.py  live_promotion.py  (+47 more)
(+101 files in other folders)
