[project]
name = "arthabot"
version = "0.1.0"
description = "Constitution-first intraday trading bot scaffold for the Indian stock market."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "kiteconnect>=5.0.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.23.0",
  "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
